--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,39 @@
-node_modules
-dist
+## Node
+node_modules/
+
+## Build outputs
+dist/
+client/dist/
+client/build/
+server/dist/
+
+## Environment files
+.env
+.env.*
+.env.local
+
+## Editor directories
+.vscode/
+.idea/
+.history/
+
+## Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+## Lockfiles (optional - include if you don't want them committed)
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
+
+## OS generated files
 .DS_Store
+Thumbs.db
+ehthumbs.db
+
+## Misc
 server/public
 vite.config.ts.*
 *.tar.gz
